# proyecto2SistemasOp

./: README.md
Proyecto2OS/Componente/: CMakeLists.txt  main.cpp
Proyecto2OS/Componente/include/: AlgoritmoFIFO.cpp  AlgoritmoFIFO.hpp  CargaDatos.hpp  Metricas.hpp  Proceso.hpp  Recursos.hpp  Sincronizacion.hpp  VisualizacionSincronia.hpp
Proyecto2OS/Componente/src/: AlgoritmoFIFO.cpp  CargaDatos.cpp  Metricas.cpp  Recursos.hpp  Sincronizacion.hpp  VisualizacionSincronia.hpp
